# GameCollection

./: .gitignore  Makefile  README.md  main  make.sh  old_Makefile
HelloWorld/: CMakeLists.txt  HelloWorld.cbp  HelloWorld.cbp.save  HelloWorld.depend  HelloWorld.layout  HelloWorld.layout.save  build.sh  cppTest.cpp  glad.c  main.cpp  main.cpp.save
HelloWorld/.cache/clangd/index/: ParticleGenerator.cpp.E9FE4DCC3C202397.idx  ParticleGenerator.h.66046D56B1E5A056.idx  _fixes.hpp.DFFDF1B291551F31.idx  _vectorize.hpp.B57E1306052D1FC9.idx  ballObject.cpp.0BF1C0427813408C.idx  ballObject.h.30A5E3E96638CCF6.idx  breakoutGame.cpp.C61FE0EAB685249A.idx  breakoutGame.h.88F0F18001FBA6E0.idx  common.hpp.0EF49C65AA49686A.idx  compute_common.hpp.6D1512E013F25898.idx  compute_vector_decl.hpp.43D604B8150B1367.idx  compute_vector_relational.hpp.F684CB70302DC22E.idx  constants.hpp.361CF949E0BFB01A.idx  (+205 more)
HelloWorld/include/: ParticleGenerator.h  ballObject.h  ballObject.h.save  breakout.h  breakout.h.save  breakoutGame.h  breakoutGame.h.save  core.h  core.h.save  engine.h.save  gameLevel.h  gameObject.h  graphicsManager.h  graphicsManager.h.save  helper.h  helper.h.save  particleGenerator.h  particleGenerator.h.save  program.h  resourceManager.h  resourceManager.h.save  shader.h  shader.h.save  spriteRenderer.h  spriteRenderer.h.save  texture.h
HelloWorld/include/glad/: glad.h
HelloWorld/levels/: one.lvl  two.lvl
HelloWorld/src/: ParticleGenerator.cpp  ballObject.cpp  breakout.cpp  breakout.cpp.save  breakoutGame.cpp  breakoutGame.cpp.save  core.cpp  core.cpp.save  engine.cpp  engine.cpp.save  gameLevel.cpp  gameLevel.cpp.save  gameObject.cpp  gameObject.cpp.save  graphicsManager.cpp  graphicsManager.cpp.save  particleGenerator.cpp.save  program.cpp  program.cpp.save  resourceManager.cpp  resourceManager.cpp.save  shader.cpp  spriteRenderer.cpp  spriteRenderer.cpp.save  texture.cpp
HelloWorld/src/shaders/: 3.3.shader.vs.save
(+57 files in other folders)
